# wasp-dl-module3

./: .gitignore  accelerate.py  data.py  ddpm.py  download_from_hf.py  generate.ipynb  generate_images_ddpm.py  infer_celeba_hq.py  model.py  models.py  pyproject.toml  readme.md  setup.sh  train_celeba_hq.py  utils.py  wct_sampling.py
conda/: conda_env_cpu.yaml  conda_env_gpu.yaml
ddpm/: data.py  ddpm.py  generate_images.py  models.py  plot_images.ipynb  train_celeba_hq.py  train_cifar10.py  utils.py
evaluation/: data.py  fid.py  quality_metrics.py
training_scripts/: train_celeba_hq.py  train_cifar10.py  train_vae_cifar10.py  train_vae_mnist.py
vae/: data.py  generate_images.ipynb  train.py  vae.py
