[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wasp-dl-module3"
version = "0.1.0"
description = ""
authors = [
  { name = "Marcus Lassila", email = "lassila@chalmers.se" }
]
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["ddpm", "evaluation", "vae"]
